# etl

./: .gitignore
golang/: .gitignore  api.go  element_processors.go  element_writer.go  executor.go  fs_source.go  go.mod  go.sum  mysql_source.go  mysql_source_test.go  progress_updater.go  shard_worker.go
golang/run/: main.go
python/: .gitignore  pyproject.toml
python/etl/: cio_generate_deliveries.py  mysql_export.py
